<resources>
    <string name="app_name">Campus App</string>
    <string name="search">Suchen</string>
    <string name="lecturerImg">Dozentenbild</string>
    <string name="mail">Email</string>
    <string name="phone">Telefon</string>
    <string name="office">Büro</string>
    <string name="homepage">Homepage</string>
    <string name="overview">Übersicht</string>
    <string name="level">%s. Semester</string>
    <string name="lecturer">Dozenten</string>
    <string name="modules">Module</string>
    <string name="ects">%s Ects</string>
    <string name="card_caption_general">ALLGEMEIN</string>
    <string name="card_caption_lecturer">Dozenten</string>
    <string name="card_caption_study">Studiengang</string>
    <string name="card_caption_year">Semester</string>
    <string name="card_caption_lecture_type">Art der Veranstaltung</string>
    <string name="card_caption_content">INHALT</string>
    <string name="card_caption_effort">AUFWAND</string>
    <string name="card_caption_credits">ECTS</string>
    <string name="card_caption_hours_per_week">SWS</string>
    <string name="card_caption_distribution">Verhältnis Vorlesung / Eigenstudium</string>
    <string name="card_caption_exam">PRÜFUNG</string>
    <string name="card_caption_module_id">Modulnummer</string>
    <string name="card_caption_exam_type">Art der Prüfung</string>
    <string name="card_caption_literature">Literaturempfehlung</string>
    <string name="drawer_open">Öffnen</string>
    <string name="drawer_close">Schließen</string>
    <string name="all">Alle</string>

    <string name="bin">Informatik</string>
    <string name="win">Wirtschaftsinformatik</string>
    <string name="ec">E-Commerce</string>
    <string name="filter">Filter</string>
    <string name="map">Karte</string>
    <string name="title_activity_lecturer_detail">LecturerDetailActivity</string>
    <string name="lecturer_picture">lecturer_picture</string>
    <string name="card_caption_subject">AUFGABEN</string>
    <string name="card_caption_office">BÜRO</string>
    <string name="card_caption_room">Raum</string>
    <string name="card_caption_address">Anschrift</string>
    <string name="card_caption_contact">KONTAKT</string>
    <string name="card_caption_email">Email</string>
    <string name="card_caption_phone">Telefon</string>
    <string name="card_caption_website">Website</string>
    <string name="noGPSHeadline">GPS deaktiviert!</string>
    <string name="noGPS">Möchten Sie GPS jetzt aktivieren?</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="noInternet">Kein Internet verfügbar</string>

    <string name="statistics">Statistiken</string>
    <string name="done_modules">Absolvierte Module</string>
    <string name="to_do_modules">Ausstehende Module</string>

    <string name="elearning">eLearning</string>
    <string name="student_portal">Studentenportal</string>

    <string name="finished_etcs">Erreichte ETCS Punkte %s/210</string>
    <string name="apparenticeShip">Praktikum</string>
    <string name="choise">Vertiefung</string>
</resources>
