<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/navigation_lecturers" android:title="@string/lecturer" android:icon="@drawable/ic_lecturers" />
    <item android:id="@+id/navigation_modules" android:title="@string/modules" android:icon="@drawable/ic_modules" />
    <item android:id="@+id/navigation_map" android:title="@string/map" android:icon="@drawable/ic_map" />
    <item android:id="@+id/elearning" android:title="@string/elearning" android:icon="@drawable/ic_web"/>
    <item android:id="@+id/student_portal" android:title="@string/student_portal" android:icon="@drawable/ic_web"/>
    <item android:id="@+id/statistics" android:title="@string/statistics" android:icon="@drawable/common_google_signin_btn_icon_dark_pressed"/>
</menu>