<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="de.fhws.campusapp.fragment.LecturerDetailFragment"
                android:orientation="vertical"
                android:id="@+id/frame">
    <ImageView
        android:contentDescription="@string/lecturerImg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:id="@+id/profilePicture_iv"
        android:layout_above="@+id/linear" />

    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|center_horizontal"
        android:gravity="center"
        android:layout_alignParentEnd="false"
        android:layout_alignParentRight="false"
        android:layout_alignParentStart="false"
        android:layout_alignParentLeft="false"
        android:layout_alignParentBottom="true">

        <ImageView
            android:contentDescription="@string/mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/email_ibtn"
            android:src="@drawable/ic_mail_white"/>

        <ImageView
            android:contentDescription="@string/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/phone_ibtn"
            android:src="@drawable/ic_call_white"
            android:layout_gravity="center"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp" />

        <ImageView
            android:contentDescription="@string/office"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_ibtn"
            android:src="@drawable/ic_home_white"
            android:layout_marginRight="16dp"
            android:layout_marginEnd="16dp" />

        <ImageView
            android:contentDescription="@string/homepage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/website_ibtn"
            android:src="@drawable/ic_launch_white"
            />

    </LinearLayout>

</RelativeLayout>
