<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/CardViewModule"
    android:layout_margin="16dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="8dp"
        tools:context="de.fhws.campusapp.fragment.StatisticFragment">

        <com.github.mikephil.charting.charts.PieChart
            android:id="@+id/chart"
            android:layout_gravity="center_horizontal"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_marginBottom="16dp"/>

        <TextView
            android:id="@+id/finished"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/finished_etcs" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/apprenticeship_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apparenticeShip" />

            <CheckBox
                android:id="@+id/apprenticeship_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/choise_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/choise" />

            <CheckBox
                android:id="@+id/choise_cb"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:clickable="false" />

        </LinearLayout>
    </LinearLayout>
</android.support.v7.widget.CardView>
